--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <title>🧠 Skyzee Encoder V3</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <title>Skyzee Encoder V3</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
     body {
       margin: 0;
       padding: 0;
-      background: radial-gradient(circle at center, #000000 0%, #0f0f0f 100%);
       font-family: 'Share Tech Mono', monospace;
+      background: #000;
       color: #00ff99;
       display: flex;
       flex-direction: column;
@@ -21,32 +21,25 @@
 
     h1 {
       text-shadow: 0 0 10px #00ff99;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
       animation: glow 2s ease-in-out infinite alternate;
+      font-size: 2rem;
     }
 
     @keyframes glow {
       from { text-shadow: 0 0 10px #00ff99; }
-      to   { text-shadow: 0 0 20px #00ff99, 0 0 30px #00cc66; }
+      to   { text-shadow: 0 0 20px #00cc66, 0 0 30px #00ff99; }
     }
 
     textarea, pre {
       width: 90%;
       max-width: 800px;
       background: #111;
-      color: #00ff99;
       border: 2px solid #00ff99;
       padding: 1rem;
       margin-top: 1rem;
-      box-shadow: 0 0 10px #00ff99;
+      color: #00ff99;
       resize: vertical;
-      transition: transform 0.2s;
-    }
-
-    textarea:focus {
-      outline: none;
-      transform: scale(1.01);
+      box-shadow: 0 0 10px #00ff99;
     }
 
     button {
@@ -54,58 +47,66 @@
       color: #000;
       border: none;
       padding: 1rem 2rem;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       margin-top: 1rem;
       cursor: pointer;
       box-shadow: 0 0 10px #00ff99;
-      transition: background 0.3s ease;
     }
 
     button:hover {
       background: linear-gradient(45deg, #00cc66, #00ff99);
     }
 
-    footer {
-      margin-top: 3rem;
-      font-size: 0.8rem;
-      color: #00ff99aa;
-    }
-
-    .terminal {
-      background: #0d0d0d;
-      border: 2px solid #00ff99;
-      padding: 1rem;
-      box-shadow: inset 0 0 10px #00ff9955;
-      margin-top: 2rem;
-      font-size: 0.95rem;
+    .loading {
+      color: yellow;
+      margin-top: 10px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
   <h1>🧠 Skyzee JS Encoder</h1>
 
-  <textarea id="inputCode" rows="10" placeholder="// Masukkan JavaScript kamu di sini..."></textarea><br>
-  <button onclick="encode()">🔥 ENCODE SEKARANG 🔒</button>
+  <textarea id="inputCode" rows="10" placeholder="// Masukkan JavaScript kamu di sini..."></textarea>
+  <button onclick="encode()">🔐 ENCODE SEKARANG</button>
+  <div class="loading" id="loading" style="display: none;">⏳ Sedang memproses...</div>
 
-  <div class="terminal">
-    <strong>Output (Encrypted):</strong>
-    <pre id="outputCode">// Hasil encode muncul di sini</pre>
-  </div>
-
-  <footer>
-    Made with 💻 by Skyzee Encode System | Anti-Inspect, Anti-Debug, Obfuscator V3
-  </footer>
+  <h2>Hasil Encode:</h2>
+  <pre id="outputCode">// hasil akan muncul di sini</pre>
 
   <script>
     async function encode() {
       const code = document.getElementById("inputCode").value;
-      const res = await fetch("/api/encode", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ code })
-      });
-      const data = await res.json();
-      document.getElementById("outputCode").textContent = data.encoded || "Error: " + data.error;
+      const output = document.getElementById("outputCode");
+      const loading = document.getElementById("loading");
+
+      if (!code.trim()) {
+        output.textContent = "❌ Masukkan kode dulu, bro!";
+        return;
+      }
+
+      loading.style.display = "block";
+      output.textContent = "";
+
+      try {
+        const res = await fetch("/api/encode", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ code })
+        });
+
+        const data = await res.json();
+
+        if (data.encoded) {
+          output.textContent = data.encoded;
+        } else {
+          output.textContent = "❌ Gagal encode: " + (data.error || "Unknown error");
+        }
+      } catch (err) {
+        output.textContent = "❌ ERROR FETCH: " + err.message;
+      } finally {
+        loading.style.display = "none";
+      }
     }
   </script>
 </body>
